<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Ek Chuac</string>
    <string name="hello_world">Bienvenido a "Ek-Chuac2"</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity2">Currency</string>
    <string name="action_about">About</string>
    <string name="intercambiar_button">Convertir</string>
    <string name="amount_text">Enter Amount</string>
    <string name="moneda_boton">Historial</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_fav">Favorites</string>
    <string name="add_fav">Add to Favorites</string>
    <string name="mensaje">Selecciona una divisa</string>
    <string name="save">Guardar</string>
    <string name="idioma">Idioma</string>
</resources>
