<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MyActivity">


    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_refresh"/>

    <item
        android:id="@+id/action_important" android:title="@string/action_fav"
        android:orderInCategory="100" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_addimportant" android:title="@string/add_fav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_important"/>



</menu>
