<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MyActivity"
    android:weightSum="1">

    <TextView android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/seleccionado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mensaje"
            />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true"
            android:text="@string/mensaje"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Ingrese la cantidad"
        android:id="@+id/T1" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="numberDecimal"
        android:id="@+id/editText"/>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/seleccionado2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mensaje"
        />
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true"
            android:text="@string/mensaje"
            />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Cantidad Convertida"/>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="55dp"
    android:text=""
    android:id="@+id/T4" />

    <Button
        android:id="@+id/btnexchange"
        android:text="@string/intercambiar_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
android:id="@+id/btn02"
android:text="@string/save"
android:layout_width="wrap_content"
android:layout_height="match_parent"
        android:layout_gravity="right" />




</LinearLayout>